frontend/src/components/user/UserLink.module.css
.user {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    gap: 6px;

    padding-left: 3px;

    vertical-align: middle;
}

.user:any-link {
    cursor: pointer;
}

.user:any-link:hover {
    color: var(--g1700);
    text-decoration: underline;
}

.avatar {
    border-radius: 999px;
    width: 1.5em;
    height: 1.5em;
}

